<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="desain_numb">Desain Nomor...</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="save">Simpan</string>
    <string name="empty">Kosong</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="message_cancel">You back, you lose it</string>
    <string name="message_delete">This is the trash for you, right?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="namatoko">Masukan nama toko :</string>
    <string name="url">URL</string>
    <string name="namaproduk">Nama desain :</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="harga">Harga :</string>
    <string name="stok">Stok :</string>
    <string name="lanjut">Lanjut</string>
    <string name="tambahkan">Tambahkan desain</string>
    <string name="foto">Foto</string>
    <string name="toko">Nama toko</string>
    <string name="alamat">Alamat</string>
    <string name="detail">Detail Alamat</string>
    <string name="desain">Desain</string>
    <string name="chat">Hubungi</string>
    <string name="simpan">Simpan</string>
    <string name="title_activity_konveksi">Konveksi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>