<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="50dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Masukkan info toko" />

        <TextView
            android:id="@+id/nama_toko"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namatoko" />

        <EditText
            android:background="@drawable/form"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <TextView
            android:id="@+id/url"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/url" />

        <EditText
            android:background="@drawable/form"
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <TextView
            android:id="@+id/alamat"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/alamat" />

        <EditText
            android:background="@drawable/form"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/foto" />


        <ImageView
            android:id="@+id/foto_toko"
            android:layout_width="121dp"
            android:layout_height="95dp"
            android:src="@drawable/ic_foto" />

        <Button
            android:id="@+id/btn_lanjut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/lanjut"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>