<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="30dp"
        android:paddingRight="50dp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/foto_produk"
            android:layout_width="317dp"
            android:layout_height="305dp"
            android:src="@drawable/ic_foto" />

        <TextView
            android:id="@+id/harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="@string/harga" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/deskripsi"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="301dp"
            android:layout_height="95dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/form"
            tools:text="@string/deskripsi" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:text="@string/chat"
            android:textAllCaps="false" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>