<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:background="#FFC3C3"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/foto_toko"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_foto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/toko"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/foto_toko"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.291"
            tools:text="@string/toko" />

        <TextView
            android:id="@+id/alamat"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/foto_toko"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.579"
            tools:text="@string/alamat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="411dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="150dp"
        android:paddingRight="50dp">

        <Button
            android:id="@+id/btn_tambahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/tambahkan"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/produk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="80dp"
            android:text="@string/desain"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>

